Release CMTK-1.0.1:

Release CMTK-1.0.0 (2009-06-16):

- API: "TemplateHistogram", "LogTemplateHistogram", and "TemplateHistogram2D"
    renamed to remove "Template" part. Also removed all global histogram
    typedefs (e.g., "UnsignedIntHistogram") to be more flexible with
    conditional instantiations
- API: "Histogram2D" renamed to "JointHistogram".
- API: all "VM_" class prefixes replaced with more explicit "VoxelMatching"

- Documentation: added extensive documentation with code examples for several
    key classes.

- SVN: moved test data out of "core" tree and into "data"; allow configuration
    of separate (shared) data tree from top-level CMake file

- Added: MiniXML library included in source tree for all upcoming XML needs.
- Added: initial support for XML command line parameter descriptions. Mostly
    infrastructure work to make sure XML can be generated by CommandLine
    class with minimal extra programmer involvement
- Added: cmtk::Console can now typeset text with given margin and width.
- Added: Windows implementation of mutex lock.
- Added: cmtk::StdOut stream
- Added: "--auto-multi-levels" option for registration tool. Selects automatic
    resolution and optimization parameters for given number of levels.
- Added: new top-level configuration option to switch all numerical algorithms
    (i.e., AlgLib) to single-precision floats. This can be used to save memory
    in extreme situations (for example, high-resolution volume reconstruction)
- Added: two new operations for imagemath tool: xor-scalar and contract-labels
- Added: Windows implementation of dcm2image file scanning

- Changed: CMake switches for changing coordinate and data real type are now
    advanced.

- Fixed: numerical instability of correlation coefficient (leading to values
    outside -1..+1, which in turn produced invalid p-values
- Fixed: legacy IGS_MOUNTPOINTS was not considered
- Fixed: principal axes registration was broken (Issue NITRC-#3743)