@@ -1,0 +1,3 @@
+180.000000 180.000000 60.000000 -> 180.000000 180.000000 60.000000
+20.000000 20.000000 20.000000 -> 20.000000 20.000000 20.000000
+0.000000 0.000000 0.000000 -> 0.000000 0.000000 0.000000
