@@ -1,0 +1,3 @@
+180.000000 180.000000 60.000000 -> 179.033556 183.913067 50.343061
+20.000000 20.000000 20.000000 -> 22.324358 21.314842 22.614839
+0.000000 0.000000 0.000000 -> 3.432943 0.723491 1.878951
